# Engify-AI-App

./: .ai-guardrails.md  .cursorrules  .env.admin.example  .env.example  .env.local.example  .env.production.example  .eslintrc.json  .gitallowed  .gitignore  .lighthouserc.json  .npmrc  200_COMMIT_SPRINT.md  AI_PLATFORM_GAPS.md  AI_TOOLS_ENRICHMENT_PLAN.md  API_KEYS_STATUS.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ARTICLE_FIX_1762121085.md  ARTICLE_SYSTEM_IMPLEMENTATION.md  AWS_SECRETS_SETUP.md  App.tsx  CHANGELOG.md  CODE_QUALITY.md  CODE_QUALITY_ASSESSMENT.md  CODE_QUALITY_REVIEW.md  CONTENT_REVIEW_REPORT.md  CONTRIBUTING.md  CURRENT_PLAN.md  DEPLOY.md  DEPLOYMENT_STATUS.md  DEVELOPMENT.md  DEVELOPMENT_JOURNEY.md  DOCUMENTATION_INDEX.md  FINAL_SPRINT.md  FINAL_SPRINT_TO_500.md  GEMINI_ANALYSIS_SUMMARY.md  GEMINI_RESEARCH_PROMPT.md  GENERATE_ARTICLE_INSTRUCTIONS.md  GENERATION_QUICK_START.md  LEARNING_CONTENT_AUDIT.md  (+70 more)
.archive/: CLEANUP_SUMMARY.md  COMMIT_TRACKING.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  FUNDING.yml  PROJECT_STRUCTURE.md  QUALITY_GATES.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit
.windsurf/: mcp_config.json  rules.md
api/: analyze-tech-debt.py  generate-kickoff.py  generate-okrs.py  process-article.py  rag.py  user-story.py
audits/: README.md
components/: EngifyWorkbench.tsx  LearningHub.tsx  LearningPathways.tsx  OnboardingJourney.tsx  PlaybookLibrary.tsx  Settings.tsx
content/: audit-report.json
data/: learning_content.ts  learning_pathways.ts  onboarding_steps.ts  playbooks.ts
docs/: ACADEMIC_VALIDATION.md  ADR-003-v2-api-migration.md  AI_CODING_ASSISTANT_FEATURE.md  AI_CONTEXT.md  AI_PROVIDERS.md  API_STANDARDS.md  API_TESTING.md  APP_STORE_READINESS.md  ARCHITECTURE.md  BRAND_STORY.md  BUSINESS_USE_CASES.md  CASE_STUDIES_PLAN.md  CLEANUP_AUDIT.md  CODE_QUALITY_AUDIT_NOV_2.md  CODE_QUALITY_SUMMARY.md  COMPLIANCE_CHECKLIST.md  CONSOLIDATION_EXECUTED.md  CONSOLIDATION_PLAN.md  CONTENT_BACKLOG.md  CONTENT_RECOVERY_LOG.md  CONTRIBUTING.md  CRITICAL_TASKS_NOV_2.md  CURRENT_STATUS.md  CURRENT_TASK_PROMPT_AUDIT_WORKFLOW.md  DAY_7_COMPLIANCE_VERIFICATION.md  DEPENDENCY_UPDATE_PLAN.md  DEPLOYMENT.md  DESIGN_INSPIRATION.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_NOV_2.md  ENTERPRISE_COMPLIANCE_AUDIT_DAY5.md  ENTERPRISE_STANDARDS_AUDIT_2025.md  FAQ.md  FINAL_STATUS.md  FREEMIUM_STRATEGY.md  FUTURE_IDEAS.md  GIT_WORKFLOW.md  KERNEL_FRAMEWORK.md  MCP_AUTH_IMPLEMENTATION.md  MOBILE_PWA_PLAN.md  (+33 more)
engify-extension/: README.md  background-simple.js  background-v2.js  background.js  content-enhanced.js  content-simple.js  content.css  content.js  manifest-complex.json  manifest.json  overlay.js  popup-enhanced.html  popup-enhanced.js  popup-simple.html  popup-simple.js  popup-v3.html  popup-v3.js  popup.html  popup.js  test-enhanced.html  test.html
hireme/: AI_MODEL_COMPARISON_GUIDE.md  CHANGES_SUMMARY.md  Donnie-Laur_Resume_Claude-3.5-Sonnet.txt  Donnie-Laur_Resume_Claude-Opus-4.1-Thinking.txt  Donnie-Laur_Resume_GPT-4o.txt  Donnie-Laur_Resume_Gemini-2.5-Pro.txt  Donnie-Laur_Resume_Hybrid-Enhanced.txt  Donnie-Laur_Resume_Optimized.txt  EDUCATION_STRATEGY.md  FINAL_CHANGES.md  README.md  RESUME_OPTIMIZATION_PROMPT.md  (+1 more)
python/: Dockerfile  README.md  pyproject.toml  requirements.txt  test-rag-service.py
python/api/: ai_execute.py  embeddings.py  rag.py
python/tests/: test_rag.py
python/utils/: __init__.py  logging_config.py
(+2587 files in other folders)
